# rocket-mongodb-cors

./: Cargo.toml  README.md
src/: main.rs
src/api/: user_api.rs
src/models/: user_model.rs
src/repository/: mongodb_repo.rs
