[package]
name = "rocket-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.0", default-features = false, features = ["sync"] }
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde_json = "1"